fix button height when text too long

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,9 +14,11 @@
   /* BUTTON */
   --button-height: 48px;
   --button-small: 35px;
-  --button-radius: 24px;
+  --button-radius: 50px;
   --button-font-size: 16px;
   --button-font-size-small: 12px;
+  --button-padding: 12px 24px;
+  --button-line-height: 24px;
   --primary-button-color: linear-gradient(100deg, #f14545 13%, #c41432 87%);
   --primary-button-color-hover: linear-gradient(100deg, #c41432 13%, #c41432 87%);
   --primary-button-bg-color-disabled: #80909f;
